fixed height of waves, preventing from clipping on highest wave

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -11,7 +11,7 @@ body {
 }
 
 .ocean { 
-  height: 10%;
+  height: 12%;
   width:100%;
   position:absolute;
   bottom:0;
@@ -22,15 +22,15 @@ body {
 .wave {
     background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x; 
     position: absolute;
-    top: -198px;
+    top: -185px;
     width: 6400px;
-    height: 198px;
+    height: 230px;
     animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
     transform: translate3d(0, 0, 0);
   }
   
   .wave:nth-of-type(2) {
-    top: -175px;
+    top: -160px;
     animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
     opacity: 1;
   }
